--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,9 @@
   "dependencies": {
     "koa": "^2.6.2"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "babel-register": "^6.26.0"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
