--- a/backend/package.json
+++ b/backend/package.json
@@ -8,9 +8,11 @@
     "koa": "^2.6.2",
     "koa-body": "^4.0.4",
     "koa-route": "^3.2.0",
+    "koa-session": "^5.10.0",
     "koa-static": "^5.0.0",
     "koa-static-cache": "^5.1.2",
-    "log4js": "^3.0.6"
+    "log4js": "^3.0.6",
+    "pg": "^7.6.1"
   },
   "devDependencies": {
     "babel-polyfill": "^6.26.0",
