--- a/backend/package.json
+++ b/backend/package.json
@@ -15,9 +15,10 @@
     "pg": "^7.6.1"
   },
   "devDependencies": {
-    "babel-polyfill": "^6.26.0",
-    "babel-preset-env": "^1.7.0",
-    "babel-register": "^6.26.0"
+    "@babel/core": "^7.1.6",
+    "@babel/polyfill": "^7.0.0",
+    "@babel/preset-env": "^7.1.6",
+    "@babel/register": "^7.0.0"
   },
   "scripts": {
     "start": "DEBUG=workerChat:* DEBUG_COLORS=true node index.js",
