--- a/backend/package.json
+++ b/backend/package.json
@@ -12,7 +12,9 @@
     "koa-static": "^5.0.0",
     "koa-static-cache": "^5.1.2",
     "log4js": "^3.0.6",
-    "pg": "^7.6.1"
+    "ms": "^2.1.1",
+    "pg": "^7.6.1",
+    "sprintf-js": "^1.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.1.6",
