--- a/backend/package.json
+++ b/backend/package.json
@@ -7,14 +7,15 @@
     "debug": "^4.1.0",
     "koa": "^2.6.2",
     "koa-body": "^4.0.4",
-    "koa-route": "^3.2.0",
+    "koa-router": "^7.4.0",
     "koa-session": "^5.10.0",
     "koa-static": "^5.0.0",
     "koa-static-cache": "^5.1.2",
     "log4js": "^3.0.6",
     "ms": "^2.1.1",
     "pg": "^7.6.1",
-    "sprintf-js": "^1.1.1"
+    "sprintf-js": "^1.1.1",
+    "uuid": "^3.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.1.6",
